--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ server.port=8085
 spring.datasource.url=jdbc:mysql://localhost:3306/swap-ticket?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -19,16 +18,24 @@ spring.jpa.properties.jakarta.persistence.validation.mode=none
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email
-spring.mail.password=your-app-password
+spring.mail.username=sanatbuyya@gmail.com
+spring.mail.password=pjgomkthzzzkstfb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 file.upload-dir=uploads/
 
-stock.api.key=HE0SHACD2WLNJNOE
 
-razor-pay.api.key=your-api-key
-razor-pay.api.secret=your-api-secret
+#Cloudinary Properties
+cloudinary.api.name=dgrxmavho
+cloudinary.api.key=733189736643147
+cloudinary.api.secret=BIaTjViHLyGSiszZCH0R2rqKyRU
+#Razorpay Properties
+razor-pay.api.key=rzp_test_HkFY3rSv7zcCnX
+razor-pay.api.secret=oJlYLpC1hknO5cVqym5ZnNFI
+
+
+admin.email=admin@swapticket.com
+admin.password=admin
 
 platformPercentage=0.04
