--- a/pom.xml
+++ b/pom.xml
@@ -77,13 +77,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<dependency>
+    <groupId>com.cloudinary</groupId>
+    <artifactId>cloudinary-http44</artifactId>
+    <version>1.29.0</version>
+</dependency>
+
+
 		<!-- pom.xml -->
 <dependency>
     <groupId>com.razorpay</groupId>
     <artifactId>razorpay-java</artifactId>
     <version>1.4.2</version>
 </dependency>
-
 	</dependencies>
 
 	<build>
