--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,9 +27,10 @@ file.upload-dir=uploads/
 
 
 #Cloudinary Properties
-cloudinary.api.name=dgrxmavho
-cloudinary.api.key=733189736643147
-cloudinary.api.secret=BIaTjViHLyGSiszZCH0R2rqKyRU
+cloudinary.url=cloudinary://733189736643147:BIaTjViHLyGSiszZCH0R2rqKyRU@dgrxmavho
+#cloudinary.api.name=dgrxmavho
+#cloudinary.api.key=733189736643147
+#cloudinary.api.secret=BIaTjViHLyGSiszZCH0R2rqKyRU
 #Razorpay Properties
 razor-pay.api.key=rzp_test_HkFY3rSv7zcCnX
 razor-pay.api.secret=oJlYLpC1hknO5cVqym5ZnNFI
