One PNR with multiple passenger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,6 @@ razor-pay.api.key=rzp_test_HkFY3rSv7zcCnX
 razor-pay.api.secret=oJlYLpC1hknO5cVqym5ZnNFI
 
 admin.email=admin@swapticket.com
-admin.password=admin
+admin.password=Sanat@123
 
 platformPercentage=0.04
