--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ target/
 /src/main/resources/application
 /src/main/resources/application.properties
 
+# in .gitignore
+src/main/resources/application.properties
+
+
 ### STS ###
 .apt_generated
 .classpath
