--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,10 +1,5 @@
 {"properties": [
   {
-    "name": "cloudinary.api.name",
-    "type": "java.lang.String",
-    "description": "A description for 'cloudinary.api.name'"
-  },
-  {
     "name": "razor-pay.api.secret",
     "type": "java.lang.String",
     "description": "A description for 'razor-pay.api.secret'"
@@ -23,5 +18,35 @@
     "name": "cloudinary.api.key",
     "type": "java.lang.String",
     "description": "A description for 'cloudinary.api.key'"
+  },
+  {
+    "name": "admin.email",
+    "type": "java.lang.String",
+    "description": "A description for 'admin.email'"
+  },
+  {
+    "name": "file.upload-dir",
+    "type": "java.lang.String",
+    "description": "A description for 'file.upload-dir'"
+  },
+  {
+    "name": "platformPercentage",
+    "type": "java.lang.String",
+    "description": "A description for 'platformPercentage'"
+  },
+  {
+    "name": "aes.secret.key",
+    "type": "java.lang.String",
+    "description": "A description for 'aes.secret.key'"
+  },
+  {
+    "name": "admin.password",
+    "type": "java.lang.String",
+    "description": "A description for 'admin.password'"
+  },
+  {
+    "name": "cloudinary.api.cloud_name",
+    "type": "java.lang.String",
+    "description": "A description for 'cloudinary.api.cloud_name'"
   }
 ]}
