--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -48,5 +48,15 @@
     "name": "cloudinary.api.cloud_name",
     "type": "java.lang.String",
     "description": "A description for 'cloudinary.api.cloud_name'"
+  },
+  {
+    "name": "cloudinary.api.name",
+    "type": "java.lang.String",
+    "description": "A description for 'cloudinary.api.name'"
+  },
+  {
+    "name": "track.api.key",
+    "type": "java.lang.String",
+    "description": "A description for 'track.api.key'"
   }
 ]}
