--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -58,5 +58,14 @@
     "name": "track.api.key",
     "type": "java.lang.String",
     "description": "A description for 'track.api.key'"
+  },
+  {
+    "name": "app.upload.directory",
+    "type": "java.lang.String",
+    "description": "A description for 'app.upload.directory'"
+  },{
+    "name": "app.train.data.file",
+    "type": "java.lang.String",
+    "description": "A description for 'app.train.data.file'"
   }
 ]}
