--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -63,9 +63,15 @@
     "name": "app.upload.directory",
     "type": "java.lang.String",
     "description": "A description for 'app.upload.directory'"
-  },{
+  },
+  {
     "name": "app.train.data.file",
     "type": "java.lang.String",
     "description": "A description for 'app.train.data.file'"
+  },
+  {
+    "name": "razorpay.vpa_verify_url",
+    "type": "java.lang.String",
+    "description": "A description for 'razorpay.vpa_verify_url'"
   }
 ]}
